tests/ui/wf/issue-96810.stderr
error[E0277]: the trait bound `K: Tr` is not satisfied
  --> $DIR/issue-96810.rs:8:8
   |
LL |     s: S<K>,
   |        ^^^^ the trait `Tr` is not implemented for `K`
   |
note: required by a bound in `S`
  --> $DIR/issue-96810.rs:1:13
   |
LL | struct S<T: Tr>(T::Assoc);
   |             ^^ required by this bound in `S`
help: consider restricting type parameter `K` with trait `Tr`
   |
LL | struct Hoge<K: Tr> {
   |              ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
